recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:10: error: missing arguments for method droite in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
    droite;
    ^